feat: update book name unique