@@ -5,9 +5,10 @@ import com.librarymanagement.domain.request.BooksRequestDto;
 import com.librarymanagement.domain.response.BooksResponseDto;
 import com.librarymanagement.enums.BookStatus;
 import com.librarymanagement.exception.DataNotFoundException;
-import com.librarymanagement.domain.model.AuthorsModel;
-import com.librarymanagement.domain.model.BooksModel;
-import com.librarymanagement.domain.model.PublishersModel;
+import com.librarymanagement.domain.model.Authors;
+import com.librarymanagement.domain.model.Books;
+import com.librarymanagement.domain.model.Publishers;
+import com.librarymanagement.exception.UserAlreadyExistsException;
 import com.librarymanagement.repository.AuthorRepository;
 import com.librarymanagement.repository.BooksRepository;
 import com.librarymanagement.repository.PublisherRepository;
@@ -15,12 +16,10 @@ import com.librarymanagement.util.ErrorMessages;
 import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.springframework.objenesis.instantiator.util.UnsafeUtils;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,7 +27,7 @@ import java.util.stream.Collectors;
 public class BooksService {
 
 
-    private final BooksRepository repository;
+    private final BooksRepository bookRepository;
     private final ModelMapper modelMapper;
     private final AuthorRepository authorRepository;
     private final PublisherRepository publisherRepository;
@@ -36,52 +35,61 @@ public class BooksService {
 
 
 
-    public BooksRequestDto saveBook(BooksRequestDto bookDto) {
-        AuthorsModel author = authorRepository.save(modelMapper.map(bookDto.getAuthors(), AuthorsModel.class));
-        PublishersModel publisher = publisherRepository.save(modelMapper.map(bookDto.getPublishers(), PublishersModel.class));
+    public void saveBook(BooksRequestDto bookDto) {
+        if (bookRepository.existsByName(bookDto.getName())) {
+            throw new UserAlreadyExistsException("Book already exists.");
+        }
 
-        BooksModel book = modelMapper.map(bookDto, BooksModel.class);
+
+        Authors author = authorRepository.save(modelMapper.map(bookDto.getAuthors(), Authors.class));
+        Publishers publisher = publisherRepository.save(modelMapper.map(bookDto.getPublishers(), Publishers.class));
+
+        Books book = modelMapper.map(bookDto, Books.class);
         book.setAuthors(author);
         book.setPublishers(publisher);
         book.setBookStatus(BookStatus.KUTUPHANEDE);
 
-        BooksModel savedBook = repository.save(book);
-        return modelMapper.map(savedBook, BooksRequestDto.class);
+        Books savedBook = bookRepository.save(book);
+        modelMapper.map(savedBook, BooksRequestDto.class);
     }
 
 
     public List<BooksResponseDto> getBooks() {
-        List<BooksModel> books = repository.findAll();
-        List<BooksResponseDto> dtos = books.stream().map(BooksModel-> modelMapper.map(BooksModel, BooksResponseDto.class)).collect(Collectors.toList());
+        List<Books> books = bookRepository.findAll();
+        List<BooksResponseDto> dtos = books.stream().map(BooksModel-> modelMapper.map(BooksModel, BooksResponseDto.class)).toList();
         return dtos;
     }
 
     public BooksResponseDto getBookById(UUID id) {
-        BooksModel booksModel = repository.findById(id).orElseThrow(() -> new DataNotFoundException(ErrorMessages.BOOK_NOT_FOUND.getValue()));
-       return modelMapper.map(booksModel, BooksResponseDto.class);
+        Books books = bookRepository.findById(id).orElseThrow(() -> new DataNotFoundException(ErrorMessages.BOOK_NOT_FOUND.getValue()));
+       return modelMapper.map(books, BooksResponseDto.class);
     }
 
     public BooksResponseDto getBookByName(String name) {
-        BooksModel booksModel = repository.findByName(name).orElseThrow(() -> new DataNotFoundException(ErrorMessages.BOOK_NOT_FOUND.getValue()));
-        return modelMapper.map(booksModel, BooksResponseDto.class);
+        Books books = bookRepository.findByName(name).orElseThrow(() -> new DataNotFoundException(ErrorMessages.BOOK_NOT_FOUND.getValue()));
+        return modelMapper.map(books, BooksResponseDto.class);
     }
 
 
     public BooksResponseDto updateBook(UUID id, BooksRequestDto booksDto) {
-        BooksModel optionalBooksModel = repository.findById(id).orElseThrow(() -> new DataNotFoundException(ErrorMessages.BOOK_NOT_FOUND.getValue()));
+        if (bookRepository.existsByName(booksDto.getName())) {
+            throw new UserAlreadyExistsException("Book name already exists.");
+        }
 
-            BooksModel existingBook = optionalBooksModel;
+        Books optionalBooks = bookRepository.findById(id).orElseThrow(() -> new DataNotFoundException(ErrorMessages.BOOK_NOT_FOUND.getValue()));
+
+            Books existingBook = optionalBooks;
             existingBook.setName(booksDto.getName());
             existingBook.setRelease(booksDto.getRelease());
             existingBook.setBookCategory(booksDto.getBookCategory());
 
-            AuthorsModel author = authorRepository.save(modelMapper.map(booksDto.getAuthors(), AuthorsModel.class));
+            Authors author = authorRepository.save(modelMapper.map(booksDto.getAuthors(), Authors.class));
             existingBook.setAuthors(author);
 
-            PublishersModel publisher = publisherRepository.save(modelMapper.map(booksDto.getPublishers(), PublishersModel.class));
+            Publishers publisher = publisherRepository.save(modelMapper.map(booksDto.getPublishers(), Publishers.class));
             existingBook.setPublishers(publisher);
 
-            BooksModel updatedBook = repository.save(existingBook);
+            Books updatedBook = bookRepository.save(existingBook);
             return modelMapper.map(updatedBook, BooksResponseDto.class);
 
         }
@@ -89,9 +97,9 @@ public class BooksService {
 
     public String deleteBook(UUID id) {
 
-        BooksModel book = repository.findById(id).orElseThrow(() -> new DataNotFoundException(ErrorMessages.BOOK_NOT_FOUND.getValue()));
-        repository.save(book);
-        repository.deleteById(id);
+        Books book = bookRepository.findById(id).orElseThrow(() -> new DataNotFoundException(ErrorMessages.BOOK_NOT_FOUND.getValue()));
+        bookRepository.save(book);
+        bookRepository.deleteById(id);
         return " !!! Book Information Deleted || deleted id: " + id;
 
     }
